testsuite/neg/test_neg_v_dfloat.osl
shader
test_neg_v_dfloat (output color Cout = 0)
{
    float  val = P[0];
    float  val2 = P[1];
    
    float d = -val;
    if (int(P[0]*64)%2==0) {
        d = -val2;
    }
    
    Cout = color(d, Dx(-d), Dy(-d));
}
